--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ url-pretty: "https://thepacketbender.github.io/"
 # --- Web Statistics Section --- #
 
 # Fill in your Google Analytics gtag.js ID to track your website using gtag
-gtag: "GTM-TXR76XF"
+gtag: "UA-148457343-1"
 
 # Fill in your Google Analytics ID to track your website using GA
 #google_analytics: ""
